# koala

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: README.md  config.py  main.py  observability.py  ollama.py  routes.py  schemas.py  system_store.py
data/: ai_systems.json  ai_systems.json.bak1  ai_systems.json.bak2  ai_systems.json.bak3  ai_systems.json.bak4  ai_systems.json.bak5
data/conversations/: 5de634c2-235c-4d5c-977f-2b063da91fcc.json  77b80172-f64b-4264-b300-9bbf385dc127.json  b7370709-9453-4dee-a880-51e7b339c1dc.json  df1b84f4-f147-4e84-9f05-67dc5a57e3e0.json
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.html
frontend/src/lib/: api.ts  conversations.ts  demo.ts  markdown.ts  system-suggestion.ts  types.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/app/: +page.svelte
frontend/src/routes/demo/: +page.svelte
generation/: README.md  __init__.py  chain.py  llm.py  prompt.py  system_analysis.py
ingestion/: README.md  __init__.py  languages.py  models.py  parser.py  pipeline.py  store.py
retrieval/: README.md  __init__.py  bm25.py  hype.py  retriever.py
