[project]
name = "koala"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
  "chromadb>=0.5,<1",
  "fastapi>=0.115,<1",
  "litellm>=1.52,<2",
  "pydantic>=2.8,<3",
  "PyMuPDF>=1.24,<2",
  "rank-bm25>=0.2.2,<1",
  "sentence-transformers>=3.0,<4",
  "uvicorn>=0.30,<1",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
